<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Movie Catalogue</string>

    <string name="home">Home</string>

    <string name="title_movie">Movie</string>
    <string name="title_tvshow">TV Show</string>

    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="image_poster">Image poster</string>
    <string name="date_relealesed">Release Date</string>
    <string name="title">Title</string>
    <string name="status_detail">Released</string>
    <string name="title_overview">Overview</string>
    <string name="languange">English</string>
    <string name="icon_language">icon_language</string>
    <string name="genre_movie">Movie Genres</string>
    <string name="genre_tvshow">TvShow Genres</string>
    <string name="popularity">100.000</string>
    <string name="detail_overview">Detail Overview</string>

    <string name="change_language_settings">Language Configuration</string>
    <string name="reminder_settings">Reminder Setting</string>

    <string name="title_fav">Favorite</string>
    <string name="favorite_movie">Favorite Movie</string>
    <string name="favorite_tv_show">Favorite TV Show</string>
    <string name="added_to_favorite">Added to Favorite</string>
    <string name="removed_from_favorite">Removed from Favorite</string>

    <string name="btn_search">Button Search</string>
    <string name="error">Please Check Your Connection</string>

    <string name="widget_text">Favorite Catalogue</string>
    <string name="empty_data">Your favorite movie and tv show has no data</string>

    <string name="title_reminder">Daily Reminder</string>
    <string name="daily_reminder">Movie Catalogue will remind you to open the application everyday</string>
    <string name="title_new_release_reminder">New Release Reminder</string>
    <string name="new_release">Movie Catalogue will you of newly released movie and tv show</string>

    <string name="enable_daily">Daily Reminder Enabled</string>
    <string name="disable_daily">Daily Reminder Disabled</string>
    <string name="enable_new_release">New Release Reminder Enabled</string>
    <string name="disable_new_release">New Release Reminder Disabled</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
