<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="5dp"
    android:elevation="5dp"
    tools:context=".feature.movie.MovieFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgmovie"
            android:layout_width="125dp"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/image_poster"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/imgmovie"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:text="@string/title_movie"
                android:textSize="23sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/imgmovie"
                app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_date_black_24dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    app:layout_constraintStart_toEndOf="@id/imgmovie"
                    app:layout_constraintTop_toBottomOf="@id/title_movie"/>

                <TextView
                    android:id="@+id/releasedate_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:layout_marginStart="3dp"
                    android:textSize="15sp"
                    android:text="@string/date_relealesed"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toEndOf="@id/iv_date"
                    app:layout_constraintTop_toTopOf="@id/iv_date"/>
            </LinearLayout>

            <TextView
                android:id="@+id/overview_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="5dp"
                android:textSize="15sp"
                android:text="@string/detail_overview"
                android:ellipsize="end"
                android:maxLines="3"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/imgmovie"
                app:layout_constraintTop_toBottomOf="@id/iv_date"/>
        </LinearLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>